# smart-surveillance

./: README.md
sentinel-agent/: .gitignore  CMakeLists.txt  conanfile.txt
sentinel-agent/include/camera/: CameraManager.hpp
sentinel-agent/include/detection/: MotionDetector.hpp
sentinel-agent/include/recording/: RecordingManager.hpp
sentinel-agent/include/utils/: TimeUtils.hpp
sentinel-agent/src/: main.cpp
sentinel-agent/src/camera/: CameraManager.cpp
sentinel-agent/src/detection/: MotionDetector.cpp
sentinel-agent/src/recording/: RecordingManager.cpp
sentinel-agent/src/utils/: TimeUtils.cpp
sentinel-agent/tests/: RecordingManager_test.cpp
